# gta6

./: .gitignore  BUILD-PLAN.md  CLAUDE.md  CROWD-GRAND-PLAN.md  GAMES-FIRST.md  GO-LIVE.md  INFINITE-WORLD.md  LANGUAGE_AB_TOURNAMENT.md  MASTER-PLAN.md  MULTIPLAYER.md  PERF-NOTES.md  PERFORMANCE_PLAN.md  PROCGEN.md  RESEARCH-NOTES.md  cell-block-z.original.html.bak  custom.env  index.html  package-lock.json  package.json  vite.config.js
assets/: LICENSES.md
css/: base.css  campaign.css  city.css  dashboard.css  hud.css  inventory.css  mobile.css  screens.css
games/: airport.html  boxing.html  casino.html  dev.html  ocean.html  police.html  racing.html
rust/worldgen-probe/: Cargo.toml  README.md  bench.js  check.html  js_kernels.js  loader.js  verify.js  worker_loader_example.js
rust/worldgen-probe/src/: lib.rs
server/: db.js  directory.js  server.js  server.json  ticks.js  wsmini.js
src/: bootstrap.js  config.js  main.js
tools/: INTEGRATION-TODO.md  STUDIO.md  TESTING-LOOPS.md  adoption-buildings-city.md  adoption-terrain-forest.md  aimlib.js  aimlock-check.mjs  bake-official-ifc.mjs  casino-check.mjs  city-atlas.mjs  debug-net-browser.mjs  demolition-check.mjs  devserver.py  feedback-round2.md  go-live.sh  harness.js  jail-check.mjs  label-check.mjs  map-shot.mjs  math-gate.mjs  ocean-check.mjs  prop-audit.md  race-check.mjs  raceway-shot.mjs  render-vehicle-gallery.mjs  run-city-browser-profile.mjs  shoot-city.js  smoke-play.mjs  speech-check.mjs  street-shot.mjs  studio.mjs  terrain-map-audit.mjs  test-aircraft-world-browser.mjs  test-city-promotion.js  (+27 more)
(+591 files in other folders)
